Added Adrena Top on the product page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img class='image' src="https://images-na.ssl-images-amazon.com/images/I/61hz3cGqyHL._AC_UX385_.jpg" alt="Socks">
         <h3 class="margin" >ADRENA No Show Athletic Socks | Men Women Cushioned Liner Socks | Single Pack</h3>
         <h4 class="margin" >Price: $5.99</h4>
-        <h4 class="margin">Open product</h4>
+        <h4 class="margin"><a href="product.html">Open product</a></h4>
     </header>
 </body>
 </html>
